[package]
name = "grunt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grunt"
path = "src/main.rs"

[lib]
name = "grunt"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
csv = "1.3.0"
env_logger = "0.11.0"
log = "0.4.20"
rand = "0.8.5"

[profile.release-debug]
inherits = "release"
debug = true
