[package]
name = "grunt"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "grunt"
path = "src/main.rs"

[lib]
name = "grunt"
path = "src/lib.rs"

[dependencies]
env_logger = "0.11.0"
log = "0.4.20"
numtoa = "0.2.4"
rand = "0.8.5"
serde = { version="1.0.197", features=["derive"]}
serde_json = "1.0.114"

[profile.release-debug]
inherits = "release"
debug = true
